--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
             padding: 10px 20px;
             text-align: center;
         }
-        nav a {
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            padding: 10px 0;
+        }
+        .nav-button {
+            background-color: #0056b3;
             color: white;
-            margin: 0 15px;
+            padding: 8px 16px;
+            border-radius: 5px;
             text-decoration: none;
             font-size: 1.2em;
             font-weight: bold;
             letter-spacing: 1px;
-            transition: color 0.3s;
+            transition: background-color 0.3s, color 0.3s;
         }
-        nav a:hover {
-            color: #ffc107;
+        .nav-button:hover {
+            background-color: #ffc107;
+            color: black;
         }
         .hero {
             text-align: center;
@@ -155,11 +164,11 @@
 <header>
     <h1>Rifa Solidária para o Miguel</h1>
     <nav>
-        <a href="/rifa-miguel/index.html">Início</a>
-        <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
-        <a href="/rifa-miguel/sobre-estrabismo.html">Estrabismo</a>
-        <a href="/rifa-miguel/orcamento.html">Orçamento</a>
-        <a href="/rifa-miguel/numero-premiado.html">Número Premiado</a>
+        <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
+        <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
+        <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Estrabismo</a>
+        <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
+        <a href="/rifa-miguel/numero-premiado.html" class="nav-button">Número Premiado</a>
     </nav>
 </header>
 
